# api-backend

./: .dockerignore  .env.template  .gitignore  CHANGELOG.MD  Dockerfile  README.md  api-app.template.service  docker-compose.yaml  dockerfile  file.json  justfile  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yaml  python-checks.yaml
alembic/: env.py
alembic/versions/: 2025_03_20_1953-3e8ce9eeaf9a_init_revision.py  2025_03_27_1315-11c6fc0e266c_update_field_in_project_model.py  2025_04_06_1939-474cb5e8b552_rename_id_bid_ya_and_date_bid_ya.py  2025_04_06_1949-e9300def0c06_remove_track_and_project_id_in_users_.py  2025_04_15_2059-163de2bc2fd1_create_table_with_extra_fields.py  2025_04_15_2100-9036f1f30c3b_create_table_with_user_extra_fields.py  2025_04_15_2111-a1f1d1d48ba6_add_comments_to_field_in_users_table.py  2025_05_26_1111-2749b12e6557_create_tables_for_apikey.py  2025_05_26_1755-6cf4a8e5a337_add_column_to_api_keys_tables.py  2025_05_26_1929-2e375be1fc81_add_column_api_prefix_to_api_keys_table.py
api/api_v1_archived/api_v1/: get_endpoints.py  post_endpoints.py
api/api_v1_archived/database/: requests.py
app/: .env.template  app_lifespan.py  config.default.yaml  endpoints.py  json_handlers.py  main_router_config.py  paths_constants.py  run.py  temp_views.py
app/alembic/: env.py
app/alembic/versions/: 2025_03_20_1953-3e8ce9eeaf9a_init_revision.py  2025_03_20_1955-1520d1beeddc_create_users_table.py  2025_03_20_1959-927ecaa7fb69_create_projects_table.py  2025_03_21_1438-2358086814ea_update_type_of_field_id_bid_ya.py  2025_03_27_1309-1e677c4b5e24_add_new_field_to_project_model.py  2025_03_27_1315-11c6fc0e266c_update_field_in_project_model.py  2025_04_06_1924-fdd633cd3736_add_uuid_username_fields.py  2025_04_06_1931-7593bd1c6813_first_step_to_change_fields_in_users_.py  2025_04_06_1939-474cb5e8b552_rename_id_bid_ya_and_date_bid_ya.py  2025_04_06_1949-e9300def0c06_remove_track_and_project_id_in_users_.py  2025_04_06_2011-5c487ccceaaa_update_nullable_in_users_uuid_now_is_.py  2025_04_15_2059-163de2bc2fd1_create_table_with_extra_fields.py  2025_04_15_2100-9036f1f30c3b_create_table_with_user_extra_fields.py  2025_04_15_2111-a1f1d1d48ba6_add_comments_to_field_in_users_table.py  2025_04_25_1803-a6c41502fc9e_create_user_roles_and_permissions_tables.py  2025_04_27_2031-471d42f906f5_create_fk_in_projects_table.py  2025_05_11_1739-8f396724a8f7_add_new_fields_to_projects_table.py  2025_05_26_1111-2749b12e6557_create_tables_for_apikey.py  2025_05_26_1755-6cf4a8e5a337_add_column_to_api_keys_tables.py  2025_05_26_1929-2e375be1fc81_add_column_api_prefix_to_api_keys_table.py  2025_10_17_2308-09d43a83724d_remove_unused_fields_in_user_table.py  2025_10_17_2317-cff806216ca6_remove_userextrafields_table.py  2025_10_17_2317-eb700c427651_remove_extrafields_table.py  2025_10_17_2319-69ea416f3ec0_remove_userrole_table.py  2025_10_17_2319-88aeac2dfe46_remove_rolepermission_table.py  2025_10_17_2320-54676d53a7bb_remove_roles_table.py  2025_10_17_2320-fefa2a765300_remove_permissions_table.py  2025_10_18_0038-5fee64355616_remove_fk_from_project_table.py  2025_10_18_0040-83e31ae61eec_rename_projects_table_fields.py  2025_10_18_0047-2da95c7e793a_create_fk_for_projects_table.py  2025_10_18_0050-b3f7da93d8a3_field_title_is_not_nullable.py  2025_10_20_1654-b76247aba816_tg_id_field_is_unique.py
app/api/: __init__.py  get_endpoints.py  post_endpoints.py
app/api/api_v2/: __init__.py  base_endpoints.py  dependencies.py  devs.py  health_views.py  json_helper.py  main_views.py  rabbit_tasks.py  static_views.py  system_views.py  user_projects.py  users_endpoints.py
app/api/auth/: auth_handler.py
app/api/redirect/: __init__.py  redir_handlers.py
app/api_v1/: get_endpoints.py  post_endpoints.py
app/api_v1_archived/api_v1/: get_endpoints.py  post_endpoints.py
app/api_v1_archived/config/: log_conf.json
app/api_v1_archived/database/: models.py  requests.py
app/app_exceptions/: __init__.py  exceptions.py
app/auth/: auth_service.py  dependencies.py  jwt_helper.py  tg_auth_depends.py  tg_data_verify.py  verifiers_dispatcher.py
app/auth/verifiers/: base.py  depends.py  tg_miniapp.py  tg_oidc.py  tg_widget.py
app/config/: __init__.py  auth_bots.py  config.py  database.py  log.py  log_conf.json  log_conf.yaml  rabbitmq.py  s3.py  uvicorn.py
app/core/: __init__.py  config.py  log_conf.json
app/core/crud/: __init__.py  config.py  create.py  crud_manager.py  crud_service.py  dependencies.py  read.py
app/core/database/: __init__.py  base.py  db_helper.py  mixins.py  projects.py  user.py  users.py
app/core/s3/: __init__.py  s3_service.py
app/database/: models.py  requests.py
app/misc/: flash_messages.py  rabbitmq_broker.py
app/misc/image/: detect.py  fetch.py  security.py  types.py  validate.py
app/rest/: main_views.py  static_views.py  system_views.py
app/rest/auth_views/: __init__.py  api_key_views.py  tg_auth.py
app/rest/pages_views/: __init__.py  affirmations_view.py  affirmations_views.py  auth_views.py  dependencies.py  login_views.py  page_views.py  profile_views.py  projects_views.py  redirect.py
app/rest/redirect/: __init__.py  redir_handlers.py
app/schemas/: __init__.py  projects.py  user.py  users.py
app/subprojects/sdelkanv/: main_views.py
app/utils/: __init__.py  case_converter.py
html/: 404.html  index.html  profile.html
html/scripts/: profile.js
html/style/: 404.css  index.css  profile.css
(+55 files in other folders)
