[tool.poetry]
name = "API Backend"
version = "0.1.0"
description = ""
license = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
alembic = "^1.15.1"
pydantic-settings = {extras = ["yaml"], version = "^2.10.1"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-decouple = "^3.8"
pyjwt = "^2.10.1"
python-dateutil = "^2.9.0.post0"
pandas = "^2.2.3"
python-multipart = "^0.0.20"
jinja2 = "^3.1.6"
faststream = {extras = ["rabbit"], version = "^0.5.47"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
httpx = "^0.28.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
mypy = "^1.17.0"
pandas-stubs = "^2.3.2.250827"
types-python-dateutil = "^2.9.0.20250822"
ruff = "^0.13.0"


[tool.mypy]  # mypy settings
strict = true
plugins = [
    "pydantic.mypy",
]